--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@heroui/alert": "^2.2.17",
     "@heroui/button": "2.2.16",
+    "@heroui/card": "^2.2.16",
     "@heroui/code": "2.2.12",
     "@heroui/input": "2.4.16",
     "@heroui/kbd": "2.2.12",
@@ -43,6 +45,7 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss-animated": "^2.0.0"
   },
