--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroui/kbd": "2.2.12",
     "@heroui/link": "2.2.13",
     "@heroui/listbox": "2.3.15",
+    "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.14",
     "@heroui/select": "^2.4.16",
     "@heroui/snippet": "2.2.17",
