--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@heroui/alert": "^2.2.17",
-    "@heroui/button": "2.2.16",
-    "@heroui/card": "^2.2.16",
-    "@heroui/code": "2.2.12",
-    "@heroui/input": "2.4.16",
-    "@heroui/kbd": "2.2.12",
-    "@heroui/link": "2.2.13",
-    "@heroui/listbox": "2.3.15",
-    "@heroui/modal": "^2.2.14",
-    "@heroui/navbar": "2.2.14",
-    "@heroui/select": "^2.4.16",
-    "@heroui/snippet": "2.2.17",
-    "@heroui/switch": "2.2.14",
-    "@heroui/system": "2.4.12",
-    "@heroui/theme": "2.4.12",
+   "@heroui/alert": "^2.2.19",
+    "@heroui/badge": "^2.2.12",
+    "@heroui/button": "2.2.19",
+    "@heroui/checkbox": "^2.3.18",
+    "@heroui/chip": "^2.2.15",
+    "@heroui/code": "2.2.14",
+    "@heroui/dropdown": "^2.3.19",
+    "@heroui/input": "2.4.19",
+    "@heroui/kbd": "2.2.15",
+    "@heroui/link": "2.2.16",
+    "@heroui/listbox": "2.3.18",
+    "@heroui/modal": "^2.2.16",
+    "@heroui/navbar": "2.2.17",
+    "@heroui/pagination": "^2.2.17",
+    "@heroui/select": "^2.4.19",
+    "@heroui/snippet": "2.2.20",
+    "@heroui/switch": "2.2.17",
+    "@heroui/system": "2.4.15",
+    "@heroui/theme": "2.4.15",
+    "@heroui/toast": "^2.0.9",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
     "axios": "^1.8.4",
@@ -45,6 +50,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "react-responsive": "^10.0.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
