feat: Add document upload functionality to vehicle modal form
- Introduced a switch to toggle document upload in the vehicle modal form.
- Implemented a new SimpleDocumentUploader component for handling file uploads with optional date validation.
- Added document types with required fields and validation logic.
- Enhanced modal form to display uploaded documents and their expiration dates.
- Updated package.json to include @heroui/date-picker for date selection.
- Created a logout functionality with cookie management and redirection to authentication system.
- Added a helper function to format dates for better readability.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@heroui/checkbox": "^2.3.18",
     "@heroui/chip": "^2.2.15",
     "@heroui/code": "2.2.14",
+    "@heroui/date-picker": "^2.3.19",
     "@heroui/dropdown": "^2.3.19",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
