--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@heroui/modal": "^2.2.16",
     "@heroui/navbar": "2.2.17",
     "@heroui/pagination": "^2.2.17",
+    "@heroui/progress": "^2.2.15",
     "@heroui/select": "^2.4.19",
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
