--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@heroui/navbar": "2.2.17",
     "@heroui/pagination": "^2.2.17",
     "@heroui/progress": "^2.2.15",
+    "@heroui/radio": "^2.3.21",
     "@heroui/select": "^2.4.19",
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
@@ -47,7 +48,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.519.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
